# serializer version: 1
# name: test_all_entities[0][aeotec_radiator_thermostat_state.json][climate.thermostat_hvac-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 50.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'Energy heat',
        'Full power',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.thermostat_hvac',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 400>,
    'translation_key': None,
    'unique_id': '3245146787.4-64-0-mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][aeotec_radiator_thermostat_state.json][climate.thermostat_hvac-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 19.4,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Thermostat - HVAC',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 50.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0.0,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: None,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'Energy heat',
        'Full power',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 400>,
    }),
    'context': <ANY>,
    'entity_id': 'climate.thermostat_hvac',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[0][climate_adc_t3000_state.json][climate.adc_t3000-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'Auto low',
        'Low',
        'Circulation',
      ]),
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 1.7,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.adc_t3000',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 395>,
    'translation_key': None,
    'unique_id': '3245146787.68-64-0-mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][climate_adc_t3000_state.json][climate.adc_t3000-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 34,
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 22.2,
      <ClimateEntityStateAttribute.FAN_MODE: 'fan_mode'>: 'Auto low',
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'Auto low',
        'Low',
        'Circulation',
      ]),
      'fan_state': 'Idle / off',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'ADC-T3000',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.IDLE: 'idle'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 1.7,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 395>,
      <ClimateEntityStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: None,
      <ClimateEntityStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: None,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 16.0,
    }),
    'context': <ANY>,
    'entity_id': 'climate.adc_t3000',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_all_entities[0][climate_airzone_aidoo_control_hvac_unit_state.json][climate.aidoo_control_hvac_unit-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'Low',
        'High',
        'Auto medium',
        'Medium',
      ]),
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 50.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.aidoo_control_hvac_unit',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 395>,
    'translation_key': None,
    'unique_id': '3245146787.12-64-0-mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][climate_airzone_aidoo_control_hvac_unit_state.json][climate.aidoo_control_hvac_unit-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 29,
      <ClimateEntityStateAttribute.FAN_MODE: 'fan_mode'>: 'Medium',
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'Low',
        'High',
        'Auto medium',
        'Medium',
      ]),
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Aidoo Control HVAC unit',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.DRY: 'dry'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 50.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0.0,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 395>,
      <ClimateEntityStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: None,
      <ClimateEntityStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: None,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'climate.aidoo_control_hvac_unit',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[0][climate_danfoss_lc_13_state.json][climate.living_connect_z_thermostat-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 50.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.living_connect_z_thermostat',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 1>,
    'translation_key': None,
    'unique_id': '3245146787.5-67-0-setpoint-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][climate_danfoss_lc_13_state.json][climate.living_connect_z_thermostat-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Living Connect Z Thermostat',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 50.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0.0,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 1>,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 14,
    }),
    'context': <ANY>,
    'entity_id': 'climate.living_connect_z_thermostat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_all_entities[0][climate_eurotronic_spirit_z_state.json][climate.thermostatic_valve-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 28,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 8,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'Energy heat',
        'Full power',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.thermostatic_valve',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 401>,
    'translation_key': None,
    'unique_id': '3245146787.8-64-0-mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][climate_eurotronic_spirit_z_state.json][climate.thermostatic_valve-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 23.7,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Thermostatic Valve',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 28,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 8,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'none',
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'Energy heat',
        'Full power',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 401>,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 22,
    }),
    'context': <ANY>,
    'entity_id': 'climate.thermostatic_valve',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_all_entities[0][climate_heatit_z_trm2fx_state.json][climate.floor_thermostat-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 50.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'Energy heat',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.floor_thermostat',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 401>,
    'translation_key': None,
    'unique_id': '3245146787.26-64-1-mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][climate_heatit_z_trm2fx_state.json][climate.floor_thermostat-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 28.8,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Floor thermostat',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 50.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0.0,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'none',
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'Energy heat',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 401>,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 29,
    }),
    'context': <ANY>,
    'entity_id': 'climate.floor_thermostat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_all_entities[0][climate_heatit_z_trm3_no_value_state.json][climate.floor_thermostat_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.floor_thermostat_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 385>,
    'translation_key': None,
    'unique_id': '3245146787.74-64-1-mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][climate_heatit_z_trm3_no_value_state.json][climate.floor_thermostat_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 22.5,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Floor thermostat',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.IDLE: 'idle'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 5,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 385>,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 8,
    }),
    'context': <ANY>,
    'entity_id': 'climate.floor_thermostat_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_all_entities[0][climate_heatit_z_trm3_state.json][climate.floor_thermostat_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.floor_thermostat_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 385>,
    'translation_key': None,
    'unique_id': '3245146787.24-64-1-mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][climate_heatit_z_trm3_state.json][climate.floor_thermostat_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 22.9,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Floor thermostat',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.IDLE: 'idle'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 35,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 5,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 385>,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 22.5,
    }),
    'context': <ANY>,
    'entity_id': 'climate.floor_thermostat_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_all_entities[0][climate_heatit_z_trm6_state.json][climate.floor_thermostat_4-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 40,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 5,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'Energy heat',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.floor_thermostat_4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 401>,
    'translation_key': None,
    'unique_id': '3245146787.101-64-1-mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][climate_heatit_z_trm6_state.json][climate.floor_thermostat_4-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 22.5,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Floor Thermostat',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.IDLE: 'idle'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 40,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 5,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'none',
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'Energy heat',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 401>,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 19,
    }),
    'context': <ANY>,
    'entity_id': 'climate.floor_thermostat_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_all_entities[0][climate_radio_thermostat_ct100_plus_state.json][climate.z_wave_thermostat-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'Auto low',
        'Low',
      ]),
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 50.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.z_wave_thermostat',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 395>,
    'translation_key': None,
    'unique_id': '3245146787.13-64-1-mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][climate_radio_thermostat_ct100_plus_state.json][climate.z_wave_thermostat-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 30,
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 22.2,
      <ClimateEntityStateAttribute.FAN_MODE: 'fan_mode'>: 'Auto low',
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'Auto low',
        'Low',
      ]),
      'fan_state': 'Idle / off',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Z-Wave Thermostat',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.IDLE: 'idle'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 50.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0.0,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 395>,
      <ClimateEntityStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: None,
      <ClimateEntityStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: None,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 22.2,
    }),
    'context': <ANY>,
    'entity_id': 'climate.z_wave_thermostat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_all_entities[0][nortek_thermostat_state.json][climate.z_wave_plus_thermostat-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 50.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'Auxiliary',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.z_wave_plus_thermostat',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 403>,
    'translation_key': None,
    'unique_id': '3245146787.67-64-0-mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[0][nortek_thermostat_state.json][climate.z_wave_plus_thermostat-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 21.7,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Z-Wave Plus Thermostat',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 50.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0.0,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'none',
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'Auxiliary',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 403>,
      <ClimateEntityStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: None,
      <ClimateEntityStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: None,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'climate.z_wave_plus_thermostat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_all_entities[1][climate_eurotronic_comet_z_state.json][climate.radiator_thermostat-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 28,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 8,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'Energy heat',
        'Full power',
        'Manufacturer specific',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.radiator_thermostat',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 401>,
    'translation_key': None,
    'unique_id': '3245146787.2-64-0-mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[1][climate_eurotronic_comet_z_state.json][climate.radiator_thermostat-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 18.5,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Radiator Thermostat',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 28,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 8,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'none',
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'Energy heat',
        'Full power',
        'Manufacturer specific',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 401>,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 21,
    }),
    'context': <ANY>,
    'entity_id': 'climate.radiator_thermostat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_all_entities[1][climate_radio_thermostat_ct100_mode_and_setpoint_on_different_endpoints_state.json][climate.z_wave_thermostat-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'Auto low',
        'Low',
      ]),
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 50.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.z_wave_thermostat',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 9>,
    'translation_key': None,
    'unique_id': '3245146787.8-67-0-setpoint-1',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[1][climate_radio_thermostat_ct100_mode_and_setpoint_on_different_endpoints_state.json][climate.z_wave_thermostat-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 60,
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 21.1,
      <ClimateEntityStateAttribute.FAN_MODE: 'fan_mode'>: 'Auto low',
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'Auto low',
        'Low',
      ]),
      'fan_state': 'Idle / off',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Z-Wave Thermostat',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.IDLE: 'idle'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 50.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0.0,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 9>,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 20.6,
    }),
    'context': <ANY>,
    'entity_id': 'climate.z_wave_thermostat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_all_entities[1][climate_radio_thermostat_ct100_mode_and_setpoint_on_different_endpoints_state.json][climate.z_wave_thermostat_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'Auto low',
        'Low',
      ]),
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 50.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.z_wave_thermostat_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 9>,
    'translation_key': None,
    'unique_id': '3245146787.8-67-0-setpoint-2',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[1][climate_radio_thermostat_ct100_mode_and_setpoint_on_different_endpoints_state.json][climate.z_wave_thermostat_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 60,
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 21.1,
      <ClimateEntityStateAttribute.FAN_MODE: 'fan_mode'>: 'Auto low',
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'Auto low',
        'Low',
      ]),
      'fan_state': 'Idle / off',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Z-Wave Thermostat',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.IDLE: 'idle'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 50.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0.0,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 9>,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 20.6,
    }),
    'context': <ANY>,
    'entity_id': 'climate.z_wave_thermostat_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_all_entities[1][climate_radio_thermostat_ct100_mode_and_setpoint_on_different_endpoints_state.json][climate.z_wave_thermostat_2_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'Auto low',
        'Low',
      ]),
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.DRY: 'dry'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 50.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'Auxiliary',
        'Resume (on)',
        'Furnace',
        'Moist',
        'Energy heat',
        'Energy cool',
        'Away',
        'Full power',
        'Manufacturer specific',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.z_wave_thermostat_2_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '(2)',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '(2)',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 410>,
    'translation_key': None,
    'unique_id': '3245146787.8-64-2-mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[1][climate_radio_thermostat_ct100_mode_and_setpoint_on_different_endpoints_state.json][climate.z_wave_thermostat_2_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 60,
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 21.1,
      <ClimateEntityStateAttribute.FAN_MODE: 'fan_mode'>: 'Auto low',
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'Auto low',
        'Low',
      ]),
      'fan_state': 'Idle / off',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Z-Wave Thermostat (2)',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.IDLE: 'idle'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.DRY: 'dry'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 50.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0.0,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: None,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'Auxiliary',
        'Resume (on)',
        'Furnace',
        'Moist',
        'Energy heat',
        'Energy cool',
        'Away',
        'Full power',
        'Manufacturer specific',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 410>,
      <ClimateEntityStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: None,
      <ClimateEntityStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'climate.z_wave_thermostat_2_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_all_entities[1][climate_radio_thermostat_ct100_mode_and_setpoint_on_different_endpoints_state.json][climate.z_wave_thermostat_3-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'Auto low',
        'Low',
      ]),
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.DRY: 'dry'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 50.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'Auxiliary',
        'Resume (on)',
        'Furnace',
        'Moist',
        'Energy heat',
        'Energy cool',
        'Away',
        'Full power',
        'Manufacturer specific',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.z_wave_thermostat_3',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 410>,
    'translation_key': None,
    'unique_id': '3245146787.8-64-1-mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[1][climate_radio_thermostat_ct100_mode_and_setpoint_on_different_endpoints_state.json][climate.z_wave_thermostat_3-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 60,
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 21.1,
      <ClimateEntityStateAttribute.FAN_MODE: 'fan_mode'>: 'Auto low',
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'Auto low',
        'Low',
      ]),
      'fan_state': 'Idle / off',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Z-Wave Thermostat',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.IDLE: 'idle'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.DRY: 'dry'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 50.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0.0,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: None,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'Auxiliary',
        'Resume (on)',
        'Furnace',
        'Moist',
        'Energy heat',
        'Energy cool',
        'Away',
        'Full power',
        'Manufacturer specific',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 410>,
      <ClimateEntityStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: None,
      <ClimateEntityStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'climate.z_wave_thermostat_3',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_all_entities[1][climate_radio_thermostat_ct100_plus_different_endpoints_state.json][climate.z_wave_thermostat_4-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'Auto low',
        'Low',
      ]),
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 50.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.z_wave_thermostat_4',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 393>,
    'translation_key': None,
    'unique_id': '3245146787.26-64-1-mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[1][climate_radio_thermostat_ct100_plus_different_endpoints_state.json][climate.z_wave_thermostat_4-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 36,
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 22.8,
      <ClimateEntityStateAttribute.FAN_MODE: 'fan_mode'>: 'Auto low',
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'Auto low',
        'Low',
      ]),
      'fan_state': 'Idle / off',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Z-Wave Thermostat',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.COOLING: 'cooling'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 50.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0.0,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 393>,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 22.8,
    }),
    'context': <ANY>,
    'entity_id': 'climate.z_wave_thermostat_4',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'cool',
  })
# ---
# name: test_all_entities[1][climate_radio_thermostat_ct101_multiple_temp_units_state.json][climate.thermostat-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'Auto low',
        'Low',
      ]),
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.DRY: 'dry'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 50.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'Auxiliary',
        'Resume (on)',
        'Furnace',
        'Moist',
        'Energy heat',
        'Energy cool',
        'Away',
        'Full power',
        'Manufacturer specific',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.thermostat',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 411>,
    'translation_key': None,
    'unique_id': '3245146787.4-64-1-mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[1][climate_radio_thermostat_ct101_multiple_temp_units_state.json][climate.thermostat-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 56,
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 18.3,
      <ClimateEntityStateAttribute.FAN_MODE: 'fan_mode'>: None,
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'Auto low',
        'Low',
      ]),
      'fan_state': 'Idle / off',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Thermostat',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.IDLE: 'idle'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.DRY: 'dry'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 50.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0.0,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: 'none',
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'Auxiliary',
        'Resume (on)',
        'Furnace',
        'Moist',
        'Energy heat',
        'Energy cool',
        'Away',
        'Full power',
        'Manufacturer specific',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 411>,
      <ClimateEntityStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: None,
      <ClimateEntityStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: None,
      <ClimateEntityStateAttribute.TARGET_TEMPERATURE: 'temperature'>: 12.8,
    }),
    'context': <ANY>,
    'entity_id': 'climate.thermostat',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_all_entities[1][climate_radio_thermostat_ct101_multiple_temp_units_state.json][climate.thermostat_2-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'Auto low',
        'Low',
      ]),
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.DRY: 'dry'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 50.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0.0,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'Auxiliary',
        'Resume (on)',
        'Furnace',
        'Moist',
        'Energy heat',
        'Energy cool',
        'Away',
        'Full power',
        'Manufacturer specific',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.thermostat_2',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '(2)',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '(2)',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 410>,
    'translation_key': None,
    'unique_id': '3245146787.4-64-2-mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[1][climate_radio_thermostat_ct101_multiple_temp_units_state.json][climate.thermostat_2-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_HUMIDITY: 'current_humidity'>: 56,
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: 16.9,
      <ClimateEntityStateAttribute.FAN_MODE: 'fan_mode'>: None,
      <ClimateEntityCapabilityAttribute.FAN_MODES: 'fan_modes'>: list([
        'Auto low',
        'Low',
      ]),
      'fan_state': 'Idle / off',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Thermostat (2)',
      <ClimateEntityStateAttribute.HVAC_ACTION: 'hvac_action'>: <HVACAction.IDLE: 'idle'>,
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
        <HVACMode.COOL: 'cool'>,
        <HVACMode.HEAT_COOL: 'heat_cool'>,
        <HVACMode.FAN_ONLY: 'fan_only'>,
        <HVACMode.DRY: 'dry'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 50.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0.0,
      <ClimateEntityStateAttribute.PRESET_MODE: 'preset_mode'>: None,
      <ClimateEntityCapabilityAttribute.PRESET_MODES: 'preset_modes'>: list([
        'none',
        'Auxiliary',
        'Resume (on)',
        'Furnace',
        'Moist',
        'Energy heat',
        'Energy cool',
        'Away',
        'Full power',
        'Manufacturer specific',
      ]),
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 410>,
      <ClimateEntityStateAttribute.TARGET_TEMP_HIGH: 'target_temp_high'>: None,
      <ClimateEntityStateAttribute.TARGET_TEMP_LOW: 'target_temp_low'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'climate.thermostat_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'heat',
  })
# ---
# name: test_all_entities[3][srt321_hrt4_zw_state.json][climate.kitchen_main_heat_actionner-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 50.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0.0,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'climate',
    'entity_category': None,
    'entity_id': 'climate.kitchen_main_heat_actionner',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': '',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': '',
    'platform': 'zwave_js',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <ClimateEntityFeature: 384>,
    'translation_key': None,
    'unique_id': '3245146787.20-64-0-mode',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[3][srt321_hrt4_zw_state.json][climate.kitchen_main_heat_actionner-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <ClimateEntityStateAttribute.CURRENT_TEMPERATURE: 'current_temperature'>: None,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'main_heat_actionner',
      <ClimateEntityCapabilityAttribute.HVAC_MODES: 'hvac_modes'>: list([
        <HVACMode.OFF: 'off'>,
        <HVACMode.HEAT: 'heat'>,
      ]),
      <ClimateEntityCapabilityAttribute.MAX_TEMP: 'max_temp'>: 50.0,
      <ClimateEntityCapabilityAttribute.MIN_TEMP: 'min_temp'>: 0.0,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <ClimateEntityFeature: 384>,
    }),
    'context': <ANY>,
    'entity_id': 'climate.kitchen_main_heat_actionner',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
